--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.57.0",
+    "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.12.2",
+    "canvas-confetti": "^1.9.3",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^3.0.6",
     "react-router": "^7.9.4",
     "tailwindcss": "^4.1.14"
   },
